--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,30 @@ body {
     background-color: #d9dcd6;
 }
 
-header {
+.header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    text-align: end;
+
 }
 
-header h1 {
-    display: inline-block;
+.header-h1 {
+    display: block;
     font-size: 48px;
+    background-color: #2a607c;
+    color: #ffffff;
+    padding-top: 20px;
+    padding-left: 20px;
+    
 }
 
-header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-header nav {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +39,11 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+.header nav, ul {
     list-style-type: none;
 }
 
-header nav ul li {
+.header nav, ul, li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,15 +93,17 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.benefit h3{
+    margin-bottom: 10px;
+    text-align: center;
+
 }
+
 
 .benefit-cost {
     margin-bottom: 32px;
@@ -134,13 +143,14 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.search-engine-optimization  {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    display: inline-block;
 }
 
 .online-reputation-management {
@@ -161,17 +171,10 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
 
 .search-engine-optimization h2 {
     margin-bottom: 20px;
